2013-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Replace call to deprecated XKeycodeToKeysym with a
	call to XkbKeycodeToKeysym.  This introduces a dependence on the XKB
	extension but it's not clear there is any alternative.

2013-06-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c:  Use dummy variable names from `set dummy` in preference
	to the default sequence x y t u v z.
	Do not ask df_readline() to process more columns than necessary.

	* src/datafile.c:  Replace an assertion (MAXDATACOLS == 7) with the
	specifically relevant test (<number of requested format terms> <= 7).
	I.e. the limit is due to applying a fixed format statement to the 
	current request for data, not from a cap on the number of columns
	that might hypothetically be requested.  Similarly replace assertion
	(max_using <= MAXDATACOLS) with a check for whether the limit is
	actually exceeded by the current using spec.

	* demo/fitmulti.dem:  Include a test script written by Hanno Hoffstadt
	that exercises multidimensional fitting.  The fit routine currently
	handles up to 5 independent dimensions, but the script tries up to six.
	It incidentally exercises the `set dummy` command and `while {...}`.

	* src/show.c (show_fit):  Report previous 'fit' command.

	* src/datafile.c (df_tokenise):  Get rid of erroneous test against
	axis_array[foo].timefmt (always evaluates as TRUE).

2013-06-12  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  More complete autoconfigure tests for qt5.

	* src/save.c (save_dummy) src/set.c (set_dummy) src/show.c
	src/unset.c (unset_dumm) docs/gnuplot.doc demo/fit.dem:
	"fit" can use more dummy variable names than plot or splot, but these
	were not being shown/reset/saved.  Document "unset dummy".
	Now we handle the full set of possible dummy variables (MAX_NUM_VAR).

2013-06-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm:  Support boxed