@@ -1,3 +1,8 @@
+2013-06-18  Shigeharu Takeno  <shige@iee.niit.ac.jp>
+
+	* src/datafile.c (plot_option_every):  Treat negative numbers as
+	indicating "default value".
+
 2013-06-16  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/gplt_x11.c:  Replace call to deprecated XKeycodeToKeysym with a
